# window_funcs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Rocket.toml  init_file.txt
data/: cats.txt
src/: db.rs  errors.rs  main.rs  sql.rs
static/: all_questions.js  base.css  manifest.json  style.css
templates/: 0.html.tera  1.html.tera  10.html.tera  2.html.tera  3.html.tera  4.html.tera  5.html.tera  6.html.tera  7.html.tera  8.html.tera  9.html.tera  about.html.tera  all_questions.html.tera  base.html.tera  home.html.tera  init.html.tera  macros.html.tera  q0.html.tera  q1.html.tera  q10.html.tera  q2.html.tera  q3.html.tera  q4.html.tera  q5.html.tera  q6.html.tera  q7.html.tera  q8.html.tera  q9.html.tera
templates/grouping/: 0.html.tera  1.html.tera  2.html.tera  3.html.tera  4.html.tera  5.html.tera  6.html.tera  index.html.tera
templates/intro/: 0.html.tera  1.html.tera  2.html.tera  index.html.tera
templates/other/: 0.html.tera  1.html.tera  2.html.tera  index.html.tera
templates/over/: 0.html.tera  1.html.tera  2.html.tera  3.html.tera  index.html.tera
templates/ranking/: 0.html.tera  1.html.tera  2.html.tera  3.html.tera  4.html.tera  index.html.tera
