[package]
name = "window_funcs"
version = "0.2.0"
authors = ["bootandy <bootandy@gmail.com>"]

edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
config = "0.13.1"
dotenv = "0.15.0"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "*"
derive_more = "*"
postgres = "0.19"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tera = "1.11"
regex = "1.5"
env_logger = "0.9"
log = "0.4"
